Fix schema name alignment in sandbox new dialog [#32205681]

--- a/app/assets/stylesheets/instances/_sandbox_new.scss
+++ b/app/assets/stylesheets/instances/_sandbox_new.scss
@@ -64,6 +64,13 @@
             margin-left: $input-spacing;
         }
 
+        .create_container {
+          input[name=schemaName] {
+            margin: 0;
+            width: $account-width;
+          }
+        }
+
         img.help {
             display: inline-block;
             margin-top: -3px;
